--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "free-text-api": "^1.2.0",
+    "mongodb": "^3.1.13",
     "nodemon": "^1.18.10",
     "request": "^2.88.0"
   }
